Style was changed
Signed-off-by: eligantRU <eligant.ru@gmail.com>

--- a/WEB/css/style.css
+++ b/WEB/css/style.css
@@ -20,7 +20,7 @@
     padding: 3rem 0 2rem;
     margin: 0; }
 .footer .links a::after {
-    content: "•";
+    content: " ";
     padding: 0 0.4rem 0 0.8rem; }
 .footer .links a:last-child::after {
     content: "";
