--- a/WEB/css/style.css
+++ b/WEB/css/style.css
@@ -1,44 +1,64 @@
 /* footer */
 
-.footer {
+.footer
+{
     background-color: #292c2f;
     text-align: center;
     font-size: 1.2rem;
-    padding: 4rem; }
-.footer p.slogan {
+    padding: 4rem;
+}
+
+.footer p.slogan
+{
     color: #8d9093;
     font-size: 1.8rem;
-    margin: 0 0 1rem; }
-.footer p.copywrite {
+    margin: 0 0 1rem;
+}
+
+.footer p.copywrite
+{
     color: #8f9296;
     font-size: 0.875rem;
-    margin: 0; }
-.footer .links a {
+    margin: 0;
+}
+
+.footer .links a
+{
     list-style: none;
     font-weight: bold;
     color: #ffffff;
     padding: 3rem 0 2rem;
-    margin: 0; }
-.footer .links a::after {
+    margin: 0;
+}
+
+.footer .links a::after
+{
     content: " ";
-    padding: 0 0.4rem 0 0.8rem; }
-.footer .links a:last-child::after {
-    content: "";
-    padding: 0 0.4rem 0 0.8rem; }
+    padding: 0 0.4rem 0 0.8rem;
+}
+
+.footer .links a:last-child::after
+{
+    content: " ";
+    padding: 0 0.4rem 0 0.8rem;
+}
 
 /* sign in / sign up */
-.auth-plain {
-    padding-right: 0px;
-    padding-left: 0px;
-    padding-top: 0px;
+.auth_plain
+{
+    padding-right: 0;
+    padding-left: 0;
+    padding-top: 0;
 }
 
-.left-solid {
-    margin-top: 0px;
-    margin-bottom: 0px;
+.left_solid
+{
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
-.signup-panel {
+.signup_panel
+{
     border-radius: 5px;
     padding: 15px;
     margin-top: 30px;
@@ -46,32 +66,43 @@
     background: #fff;
 }
 
-.signup-panel a{
+.signup_panel a
+{
     color: #fff;
 }
 
-.signup-panel i {
+.signup_panel i
+{
     font-size: 30px;
     line-height: 50px;
     color: #999;
 }
-.signup-panel form input, .signup-panel form span {
+
+.signup_panel form input, .signup_panel form span
+{
     height: 50px;
 }
-.signup-panel .welcome {
+
+.signup_panel .welcome
+{
     font-size: 26px;
     text-align: center;
     margin-left: 0;
 }
-.signup-panel p {
+
+.signup_panel p
+{
     font-size: 13px;
     font-weight: 200;
     text-align: center;
 }
-.signup-panel .button {
+
+.signup_panel .button
+{
     margin-left: 35%;
 }
 
-.newusers {
+.new_users
+{
     background: #fff;
 }
